// Vitest Snapshot v1

exports[`datasetsStore > getters 1`] = `
SentientPercentage {
  "currencySymbol": "€",
  "intValue": 103,
  "percentagePointSymbol": "ppt",
  "percentageSymbol": "%",
  "precision": 1,
  "separator_decimal": ",",
  "separator_thousands": ".",
}
`;

exports[`datasetsStore > getters 2`] = `
SentientPercentagePoint {
  "currencySymbol": "€",
  "intValue": 17,
  "percentagePointSymbol": "ppt",
  "percentageSymbol": "%",
  "precision": 1,
  "separator_decimal": ",",
  "separator_thousands": ".",
}
`;

exports[`datasetsStore > getters 3`] = `
SentientPercentage {
  "currencySymbol": "€",
  "intValue": 1078,
  "percentagePointSymbol": "ppt",
  "percentageSymbol": "%",
  "precision": 1,
  "separator_decimal": ",",
  "separator_thousands": ".",
}
`;

exports[`datasetsStore > getters 4`] = `
SentientPercentagePoint {
  "currencySymbol": "€",
  "intValue": 243,
  "percentagePointSymbol": "ppt",
  "percentageSymbol": "%",
  "precision": 1,
  "separator_decimal": ",",
  "separator_thousands": ".",
}
`;

exports[`datasetsStore > getters 5`] = `
SentientPercentage {
  "currencySymbol": "€",
  "intValue": 123,
  "percentagePointSymbol": "ppt",
  "percentageSymbol": "%",
  "precision": 1,
  "separator_decimal": ",",
  "separator_thousands": ".",
}
`;

exports[`datasetsStore > getters 6`] = `
SentientPercentagePoint {
  "currencySymbol": "€",
  "intValue": 11,
  "percentagePointSymbol": "ppt",
  "percentageSymbol": "%",
  "precision": 1,
  "separator_decimal": ",",
  "separator_thousands": ".",
}
`;

exports[`datasetsStore > getters 7`] = `
[
  {
    "Bestedingscategorieen_code": "CPI045000",
    "Bestedingscategorieen_title": "045000 Energie",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "107.8",
  },
  {
    "Bestedingscategorieen_code": "CPI142000",
    "Bestedingscategorieen_title": "142000 Vervoer buitenland",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "34.5",
  },
  {
    "Bestedingscategorieen_code": "CPI073000",
    "Bestedingscategorieen_title": "073000 Vervoersdiensten",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "32.1",
  },
  {
    "Bestedingscategorieen_code": "CPI143000",
    "Bestedingscategorieen_title": "143000 Accomodaties buitenland",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "20.6",
  },
  {
    "Bestedingscategorieen_code": "CPI096000",
    "Bestedingscategorieen_title": "096000 Pakketreizen",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "18.1",
  },
  {
    "Bestedingscategorieen_code": "CPI072000",
    "Bestedingscategorieen_title": "072000 Gebruik van privévoertuigen",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "17.2",
  },
  {
    "Bestedingscategorieen_code": "CPI141000",
    "Bestedingscategorieen_title": "141000 Voeding buitenland",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "13.3",
  },
  {
    "Bestedingscategorieen_code": "CPI051000",
    "Bestedingscategorieen_title": "051000 Meubelen, stoffering en decoratie",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "12.9",
  },
  {
    "Bestedingscategorieen_code": "CPI126000",
    "Bestedingscategorieen_title": "126000 Financiële diensten n.e.g",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "12.6",
  },
  {
    "Bestedingscategorieen_code": "CPI011000",
    "Bestedingscategorieen_title": "011000 Voedingsmiddelen",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "12.3",
  },
  {
    "Bestedingscategorieen_code": "CPI145000",
    "Bestedingscategorieen_title": "145000 Overige consumptie buitenland",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "11.3",
  },
  {
    "Bestedingscategorieen_code": "CPI043000",
    "Bestedingscategorieen_title": "043000 Onderhoud en rep. van de woning..",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "11.1",
  },
  {
    "Bestedingscategorieen_code": "CPI012000",
    "Bestedingscategorieen_title": "012000 Alcoholvrije dranken",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "11",
  },
  {
    "Bestedingscategorieen_code": "CPI071000",
    "Bestedingscategorieen_title": "071000 Aankoop van voertuigen",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "9.9",
  },
  {
    "Bestedingscategorieen_code": "CPI092000",
    "Bestedingscategorieen_title": "092000 Goederen recreatie en cultuur",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "9.8",
  },
  {
    "Bestedingscategorieen_code": "CPI053000",
    "Bestedingscategorieen_title": "053000 Huishoudelijke apparaten",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "9.6",
  },
  {
    "Bestedingscategorieen_code": "CPI144000",
    "Bestedingscategorieen_title": "144000 Cafés en restaurants buitenland",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "9.5",
  },
  {
    "Bestedingscategorieen_code": "CPI112000",
    "Bestedingscategorieen_title": "112000 Accommodaties",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "9.1",
  },
  {
    "Bestedingscategorieen_code": "CPI056000",
    "Bestedingscategorieen_title": "056000 Dagelijks onderhoud van de woning",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "8.4",
  },
  {
    "Bestedingscategorieen_code": "CPI111000",
    "Bestedingscategorieen_title": "111000 Catering diensten",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "8.3",
  },
  {
    "Bestedingscategorieen_code": "CPI054000",
    "Bestedingscategorieen_title": "054000 Glas, servies en huish. artikelen",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "8.2",
  },
  {
    "Bestedingscategorieen_code": "CPI093000",
    "Bestedingscategorieen_title": "093000 Spelart., planten en huisdieren",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "5.1",
  },
  {
    "Bestedingscategorieen_code": "CPI123000",
    "Bestedingscategorieen_title": "123000 Goederen voor persoonlijk gebruik",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "4.8",
  },
  {
    "Bestedingscategorieen_code": "CPI032000",
    "Bestedingscategorieen_title": "032000 Schoenen",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "4.8",
  },
  {
    "Bestedingscategorieen_code": "CPI121000",
    "Bestedingscategorieen_title": "121000 Persoonlijke verzorging",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "4.2",
  },
  {
    "Bestedingscategorieen_code": "CPI021000",
    "Bestedingscategorieen_title": "021000 Alcoholhoudende dranken",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "3.7",
  },
  {
    "Bestedingscategorieen_code": "CPI127000",
    "Bestedingscategorieen_title": "127000 Overig diensten n.e.g.",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "3.3",
  },
  {
    "Bestedingscategorieen_code": "CPI095000",
    "Bestedingscategorieen_title": "095000 Kranten, boeken en schrijfwaren",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "3.2",
  },
  {
    "Bestedingscategorieen_code": "CPI042000",
    "Bestedingscategorieen_title": "042000 Toegerekende huur eigen woning",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "3",
  },
  {
    "Bestedingscategorieen_code": "CPI041000",
    "Bestedingscategorieen_title": "041000 Werkelijke woninghuur",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "3",
  },
  {
    "Bestedingscategorieen_code": "CPI105000",
    "Bestedingscategorieen_title": "105000 Ander onderwijs",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "2.5",
  },
  {
    "Bestedingscategorieen_code": "CPI062000",
    "Bestedingscategorieen_title": "062000 Extramurale gezondheidszorg  ",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "2.4",
  },
  {
    "Bestedingscategorieen_code": "CPI094000",
    "Bestedingscategorieen_title": "094000 Diensten voor recr. en cultuur",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "2.1",
  },
  {
    "Bestedingscategorieen_code": "CPI131000",
    "Bestedingscategorieen_title": "131000 Zuiveringsheffing",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "1.8",
  },
  {
    "Bestedingscategorieen_code": "CPI044000",
    "Bestedingscategorieen_title": "044000 Kosten van woningvoorzieningen",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "1.8",
  },
  {
    "Bestedingscategorieen_code": "CPI124000",
    "Bestedingscategorieen_title": "124000 Sociale bescherming",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "1.7",
  },
  {
    "Bestedingscategorieen_code": "CPI061000",
    "Bestedingscategorieen_title": "061000 Medische producten, apparaten…",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "1.3",
  },
  {
    "Bestedingscategorieen_code": "CPI031000",
    "Bestedingscategorieen_title": "031000 Kleding en kledingstoffen",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "1.3",
  },
  {
    "Bestedingscategorieen_code": "CPI132000",
    "Bestedingscategorieen_title": "132000 Motorrijtuigenbelasting",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "1",
  },
  {
    "Bestedingscategorieen_code": "CPI022000",
    "Bestedingscategorieen_title": "022000 Tabak",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "-0.1",
  },
  {
    "Bestedingscategorieen_code": "CPI055000",
    "Bestedingscategorieen_title": "055000 Gereedschappen en werktuigen…",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "-0.4",
  },
  {
    "Bestedingscategorieen_code": "CPI125000",
    "Bestedingscategorieen_title": "125000 Verzekeringen",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "-0.7",
  },
  {
    "Bestedingscategorieen_code": "CPI081000",
    "Bestedingscategorieen_title": "081000 Post en pakketdiensten",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "-0.7",
  },
  {
    "Bestedingscategorieen_code": "CPI091000",
    "Bestedingscategorieen_title": "091000 Audio-, video-, fotoapparatuur ed",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "-1.4",
  },
  {
    "Bestedingscategorieen_code": "CPI052000",
    "Bestedingscategorieen_title": "052000 Huishoudtextiel",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "-1.8",
  },
  {
    "Bestedingscategorieen_code": "CPI082000",
    "Bestedingscategorieen_title": "082000 Telefoonapparatuur",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "-2.4",
  },
  {
    "Bestedingscategorieen_code": "CPI083000",
    "Bestedingscategorieen_title": "083000 Telefoondiensten",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "-5",
  },
  {
    "Bestedingscategorieen_code": "CPI133000",
    "Bestedingscategorieen_title": "133000 Hondenbelasting",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "-12.9",
  },
  {
    "Bestedingscategorieen_code": "CPI104000",
    "Bestedingscategorieen_title": "104000 Tertiair onderwijs",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "-49.4",
  },
  {
    "Bestedingscategorieen_code": "CPI102000",
    "Bestedingscategorieen_title": "102000 Secundair onderwijs",
    "Measure": "Jaarmutatie CPI",
    "Perioden_code": "2022MM07",
    "Perioden_title": "2022 juli*",
    "Unit": "%",
    "Value": "-49.4",
  },
]
`;
